; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_evrcdec.c_interpolate_lsp.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_evrcdec.c_interpolate_lsp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@interpolate_lsp.lsp_interpolation_factors = internal constant [3 x float] [float 0x3FC5566D00000000, float 5.000000e-01, float 0x3FEAAA64C0000000], align 4
@FILTER_ORDER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (float*, float*, float*, i32)* @interpolate_lsp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @interpolate_lsp(float* %0, float* %1, float* %2, i32 %3) #0 {
  %5 = alloca float*, align 8
  %6 = alloca float*, align 8
  %7 = alloca float*, align 8
  %8 = alloca i32, align 4
  store float* %0, float** %5, align 8
  store float* %1, float** %6, align 8
  store float* %2, float** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load float*, float** %5, align 8
  %10 = load float*, float** %7, align 8
  %11 = load float*, float** %6, align 8
  %12 = load i32, i32* %8, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds [3 x float], [3 x float]* @interpolate_lsp.lsp_interpolation_factors, i64 0, i64 %13
  %15 = load float, float* %14, align 4
  %16 = fpext float %15 to double
  %17 = fsub double 1.000000e+00, %16
  %18 = load i32, i32* %8, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds [3 x float], [3 x float]* @interpolate_lsp.lsp_interpolation_factors, i64 0, i64 %19
  %21 = load float, float* %20, align 4
  %22 = load i32, i32* @FILTER_ORDER, align 4
  %23 = call i32 @ff_weighted_vector_sumf(float* %9, float* %10, float* %11, double %17, float %21, i32 %22)
  ret void
}

declare dso_local i32 @ff_weighted_vector_sumf(float*, float*, float*, double, float, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
